Ajout de commentaires pour la partie streaming

--- a/init-opensky-kafka.ipynb
+++ b/init-opensky-kafka.ipynb
@@ -18,6 +18,7 @@
     "import json\n",
     "import time\n",
     "\n",
+    "# Fonction pour récupérer les données brutes depuis l'API OpenSky\n",
     "def get_opensky_data():\n",
     "    url = \"https://opensky-network.org/api/states/all\"\n",
     "    response = requests.get(url)\n",
@@ -49,6 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fonction pour compter le nombre d'avions par pays d'origine\n",
     "def process_region_counts(states):\n",
     "    region_counts = {}\n",
     "    for state in states:\n",
@@ -56,6 +58,7 @@
     "        region_counts[origin_country] = region_counts.get(origin_country, 0) + 1\n",
     "    return region_counts\n",
     "\n",
+    "# Envoi des comptages par région (format clé/valeur)\n",
     "def send_region_counts(topic, region_counts):\n",
     "    producer = KafkaProducer(\n",
     "        bootstrap_servers='kafka1:9092',\n",
@@ -65,7 +68,8 @@
     "        producer.send(topic, value={\"region\": key, \"count\": value})\n",
     "    producer.flush()\n",
     "    print(f\"Sent region counts to topic '{topic}'\")\n",
-    "    \n",
+    "\n",
+    "# Boucle principale, envoi des données toutes les 10 secondes    \n",
     "def main():\n",
     "    topic_regions = \"opensky-planes\"\n",
     "\n",
@@ -95,6 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fonction pour filtrer les avions ayant un callsign non vide\n",
     "def process_callsign_data(states):\n",
     "    filtered = []\n",
     "    for state in states:\n",
@@ -109,6 +114,7 @@
     "            })\n",
     "    return filtered\n",
     "\n",
+    "# Envoi d'une liste de messages (avions avec callsign) vers un topic Kafka\n",
     "def send_to_kafka(topic, data_list):\n",
     "    producer = KafkaProducer(\n",
     "        bootstrap_servers='kafka1:9092',\n",
@@ -120,7 +126,7 @@
     "    print(f\"Sent {len(data_list)} records to topic '{topic}'\")\n",
     "\n",
     "\n",
-    "\n",
+    "# Boucle principale, envoi des données toutes les 10 secondes\n",
     "def main():\n",
     "    topic_callsigns = \"opensky-callsigns\"\n",
     "\n",
