--- a/opensky-streaming-callsigns.ipynb
+++ b/opensky-streaming-callsigns.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importation des modules Spark nécessaires\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import from_json, col\n",
     "from pyspark.sql.types import StringType, IntegerType, StructType, StructField, DoubleType"
@@ -24,12 +25,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Création d'une session Spark configurée pour Kafka\n",
     "spark = SparkSession.builder \\\n",
     "    .appName(\"OpenSkyStreaming-Callsigns\") \\\n",
     "    .master(\"spark://spark:7077\") \\\n",
     "    .config(\"spark.jars.packages\", \"org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.3\") \\\n",
     "    .getOrCreate()\n",
-    "\n",
+    "    \n",
+    "# Définition du schéma attendu dans les messages JSON du topic Kafka\n",
     "schema1 = StructType([\n",
     "    StructField(\"region\", StringType(), True),\n",
     "    StructField(\"count\", IntegerType(), True)\n",
@@ -42,8 +45,10 @@
     "    .option(\"subscribe\", \"opensky-planes\") \\\n",
     "    .load()\n",
     "\n",
-    "# Parsing du JSON plus simple\n",
+    "# Conversion de la valeur binaire du message Kafka en chaîne JSON\n",
     "df = df.selectExpr(\"CAST(value AS STRING) as json_str\")\n",
+    "\n",
+    "# Parsing du JSON en colonnes exploitables selon le schéma défini\n",
     "parsed_df = df.select(from_json(col(\"json_str\"), schema1).alias(\"data\")).select(\"data.*\")\n",
     "\n",
     "# Écriture en console\n",
@@ -52,6 +57,7 @@
     "    .format(\"console\") \\\n",
     "    .start()\n",
     "\n",
+    "# Boucle de traitement continue\n",
     "query.awaitTermination()\n",
     "\n"
    ]
@@ -85,12 +91,14 @@
     }
    ],
    "source": [
+    "# Création d'une session Spark configurée pour Kafka\n",
     "spark = SparkSession.builder \\\n",
     "    .appName(\"OpenSkyStreaming-Callsigns\") \\\n",
     "    .master(\"spark://spark:7077\") \\\n",
     "    .config(\"spark.jars.packages\", \"org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.3\") \\\n",
     "    .getOrCreate()\n",
     "\n",
+    "# Définition du schéma attendu dans les messages JSON du topic Kafka\n",
     "schema = StructType([\n",
     "    StructField(\"callsign\", StringType(), True),\n",
     "    StructField(\"latitude\", DoubleType(), True),\n",
@@ -105,12 +113,16 @@
     "    .option(\"subscribe\", \"opensky-callsigns\") \\\n",
     "    .load()\n",
     "\n",
+    "# Conversion de la valeur binaire du message Kafka en chaîne JSON\n",
     "df = df.selectExpr(\"CAST(value AS STRING) as json_str\")\n",
+    "\n",
+    "# Parsing du JSON en colonnes exploitables selon le schéma défini\n",
     "parsed_df = df.select(from_json(col(\"json_str\"), schema).alias(\"data\")).select(\"data.*\")\n",
     "\n",
     "# Filtrer les avions avec un callsign non vide\n",
     "filtered_df = parsed_df.filter(col(\"callsign\").isNotNull() & (col(\"callsign\") != \"\"))\n",
     "\n",
+    "# Ecriture en console\n",
     "query = filtered_df.writeStream \\\n",
     "    .outputMode(\"append\") \\\n",
     "    .format(\"console\") \\\n",
