markdown pour présentation breve de l'api

--- a/init-opensky-kafka.ipynb
+++ b/init-opensky-kafka.ipynb
@@ -4,6 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# L'API utilisée : **OpenSky Network** \n",
+    "c'est un projet collaboratif qui fournit des données de traffic aérien en temps réel. Elle permet d’accéder aux informations ADS-B (Automatic Dependent Surveillance–Broadcast) transmises par les avions, captées par un réseau mondial de récepteurs.\n",
+    "\n",
+    "L'url qu'on utilise est \"https://opensky-network.org/api/states/all\" et elle retourne un json de la forme : \n",
+    "\n",
+    "{\n",
+    "  \"time\": 1711291270,\n",
+    "  \"states\": [\n",
+    "    [\n",
+    "      \"a00001\",        # 0: icao24 (identifiant unique de l'avion)\n",
+    "      \"AFR123\",        # 1: callsign (indicatif du vol, ex: \"AFR123\" = Air France 123)\n",
+    "      \"France\",        # 2: origin_country\n",
+    "      1711291267,      # 3: time_position\n",
+    "      1711291268,      # 4: last_contact\n",
+    "      2.3522,          # 5: longitude\n",
+    "      48.8566,         # 6: latitude\n",
+    "      11000.0,         # 7: baro_altitude (en mètres)\n",
+    "      False,           # 8: on_ground (si l'avion est au sol)\n",
+    "      250.0,           # 9: velocity (vitesse horizontale en m/s)\n",
+    "      ...\n",
+    "    ]\n",
+    "  ]\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports et récupération des données"
    ]
   },
