--- a/reception.ipynb
+++ b/reception.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
       "The jars for the packages stored in: /home/jovyan/.ivy2/jars\n",
       "org.apache.hadoop#hadoop-aws added as a dependency\n",
       "org.apache.spark#spark-sql-kafka-0-10_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-32e00efb-ad69-460c-964d-d6d9c2b03bf6;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-eba5c244-b097-4ac5-a77f-991b24115749;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.apache.hadoop#hadoop-aws;3.3.4 in central\n",
       "\tfound com.amazonaws#aws-java-sdk-bundle;1.12.262 in central\n",
@@ -36,35 +36,7 @@
       "\tfound commons-logging#commons-logging;1.1.3 in central\n",
       "\tfound com.google.code.findbugs#jsr305;3.0.0 in central\n",
       "\tfound org.apache.commons#commons-pool2;2.11.1 in central\n",
-      "downloading https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar ...\n",
-      "\t[SUCCESSFUL ] org.apache.hadoop#hadoop-aws;3.3.4!hadoop-aws.jar (391ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.12/3.5.3/spark-sql-kafka-0-10_2.12-3.5.3.jar ...\n",
-      "\t[SUCCESSFUL ] org.apache.spark#spark-sql-kafka-0-10_2.12;3.5.3!spark-sql-kafka-0-10_2.12.jar (207ms)\n",
-      "downloading https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aws-java-sdk-bundle-1.12.262.jar ...\n",
-      "\t[SUCCESSFUL ] com.amazonaws#aws-java-sdk-bundle;1.12.262!aws-java-sdk-bundle.jar (53514ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/wildfly/openssl/wildfly-openssl/1.0.7.Final/wildfly-openssl-1.0.7.Final.jar ...\n",
-      "\t[SUCCESSFUL ] org.wildfly.openssl#wildfly-openssl;1.0.7.Final!wildfly-openssl.jar (267ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/apache/spark/spark-token-provider-kafka-0-10_2.12/3.5.3/spark-token-provider-kafka-0-10_2.12-3.5.3.jar ...\n",
-      "\t[SUCCESSFUL ] org.apache.spark#spark-token-provider-kafka-0-10_2.12;3.5.3!spark-token-provider-kafka-0-10_2.12.jar (141ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/apache/kafka/kafka-clients/3.4.1/kafka-clients-3.4.1.jar ...\n",
-      "\t[SUCCESSFUL ] org.apache.kafka#kafka-clients;3.4.1!kafka-clients.jar (1030ms)\n",
-      "downloading https://repo1.maven.org/maven2/com/google/code/findbugs/jsr305/3.0.0/jsr305-3.0.0.jar ...\n",
-      "\t[SUCCESSFUL ] com.google.code.findbugs#jsr305;3.0.0!jsr305.jar (98ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.jar ...\n",
-      "\t[SUCCESSFUL ] org.apache.commons#commons-pool2;2.11.1!commons-pool2.jar (123ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-client-runtime/3.3.4/hadoop-client-runtime-3.3.4.jar ...\n",
-      "\t[SUCCESSFUL ] org.apache.hadoop#hadoop-client-runtime;3.3.4!hadoop-client-runtime.jar (6020ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/lz4/lz4-java/1.8.0/lz4-java-1.8.0.jar ...\n",
-      "\t[SUCCESSFUL ] org.lz4#lz4-java;1.8.0!lz4-java.jar (194ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/xerial/snappy/snappy-java/1.1.10.5/snappy-java-1.1.10.5.jar ...\n",
-      "\t[SUCCESSFUL ] org.xerial.snappy#snappy-java;1.1.10.5!snappy-java.jar(bundle) (499ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/slf4j/slf4j-api/2.0.7/slf4j-api-2.0.7.jar ...\n",
-      "\t[SUCCESSFUL ] org.slf4j#slf4j-api;2.0.7!slf4j-api.jar (122ms)\n",
-      "downloading https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-client-api/3.3.4/hadoop-client-api-3.3.4.jar ...\n",
-      "\t[SUCCESSFUL ] org.apache.hadoop#hadoop-client-api;3.3.4!hadoop-client-api.jar (3539ms)\n",
-      "downloading https://repo1.maven.org/maven2/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar ...\n",
-      "\t[SUCCESSFUL ] commons-logging#commons-logging;1.1.3!commons-logging.jar (163ms)\n",
-      ":: resolution report :: resolve 8943ms :: artifacts dl 66326ms\n",
+      ":: resolution report :: resolve 3086ms :: artifacts dl 154ms\n",
       "\t:: modules in use:\n",
       "\tcom.amazonaws#aws-java-sdk-bundle;1.12.262 from central in [default]\n",
       "\tcom.google.code.findbugs#jsr305;3.0.0 from central in [default]\n",
@@ -84,12 +56,12 @@
       "\t|                  |            modules            ||   artifacts   |\n",
       "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
       "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   14  |   14  |   14  |   0   ||   14  |   14  |\n",
+      "\t|      default     |   14  |   0   |   0   |   0   ||   14  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-32e00efb-ad69-460c-964d-d6d9c2b03bf6\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-eba5c244-b097-4ac5-a77f-991b24115749\n",
       "\tconfs: [default]\n",
-      "\t14 artifacts copied, 0 already retrieved (332424kB/509ms)\n",
-      "25/03/20 10:35:47 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t0 artifacts copied, 14 already retrieved (0kB/83ms)\n",
+      "25/03/25 09:35:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
       "/opt/conda/lib/python3.12/site-packages/pyspark/sql/context.py:113: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
@@ -251,9 +223,7 @@
     "    StructField(\"velocity\", FloatType(), True),\n",
     "    StructField(\"timestamp\", StringType(), True),\n",
     "    StructField(\"latitude\", FloatType(), True),\n",
-    "    StructField(\"longitude\", FloatType(), True),\n",
-    "    StructField(\"category\", StringType(), True)\n",
-    "])\n",
+    "    StructField(\"longitude\", FloatType(), True)])\n",
     "\n",
     "# Read raw data from Kafka\n",
     "raw_stream = sql_context.readStream \\\n",
@@ -375,18 +345,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
   }
  },
  "nbformat": 4,
