Modify some text

--- a/Batch_Request.ipynb
+++ b/Batch_Request.ipynb
@@ -622,7 +622,7 @@
    "source": [
     "### Observations \n",
     "\n",
-    "- La zone de London se distingue nettement comme la plus congestionnée En comparaison. \n",
+    "- La zone de London se distingue nettement comme la plus congestionnée. \n",
     "- Paris présente un trafic plus modéré mais stable suggérant une activité soutenue mais plus linéaire. \n",
     "- Frankfurt montre une tendance croissante ce qui peut correspondre à une montée progressive de l'activité au fil de la matinée. \n",
     "- Madrid et Rome enregistrent un trafic significativement plus faible ce qui peut refléter une activité aérienne plus locale ou moins centralisée. \n",
