--- a/reception.ipynb
+++ b/reception.ipynb
@@ -20,7 +20,7 @@
       "The jars for the packages stored in: /home/jovyan/.ivy2/jars\n",
       "org.apache.hadoop#hadoop-aws added as a dependency\n",
       "org.apache.spark#spark-sql-kafka-0-10_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-eba5c244-b097-4ac5-a77f-991b24115749;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-47f923af-64b7-41b5-8e42-257c90e9fded;1.0\n",
       "\tconfs: [default]\n",
       "\tfound org.apache.hadoop#hadoop-aws;3.3.4 in central\n",
       "\tfound com.amazonaws#aws-java-sdk-bundle;1.12.262 in central\n",
@@ -36,7 +36,35 @@
       "\tfound commons-logging#commons-logging;1.1.3 in central\n",
       "\tfound com.google.code.findbugs#jsr305;3.0.0 in central\n",
       "\tfound org.apache.commons#commons-pool2;2.11.1 in central\n",
-      ":: resolution report :: resolve 3086ms :: artifacts dl 154ms\n",
+      "downloading https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar ...\n",
+      "\t[SUCCESSFUL ] org.apache.hadoop#hadoop-aws;3.3.4!hadoop-aws.jar (1075ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/apache/spark/spark-sql-kafka-0-10_2.12/3.5.3/spark-sql-kafka-0-10_2.12-3.5.3.jar ...\n",
+      "\t[SUCCESSFUL ] org.apache.spark#spark-sql-kafka-0-10_2.12;3.5.3!spark-sql-kafka-0-10_2.12.jar (297ms)\n",
+      "downloading https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle/1.12.262/aws-java-sdk-bundle-1.12.262.jar ...\n",
+      "\t[SUCCESSFUL ] com.amazonaws#aws-java-sdk-bundle;1.12.262!aws-java-sdk-bundle.jar (123981ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/wildfly/openssl/wildfly-openssl/1.0.7.Final/wildfly-openssl-1.0.7.Final.jar ...\n",
+      "\t[SUCCESSFUL ] org.wildfly.openssl#wildfly-openssl;1.0.7.Final!wildfly-openssl.jar (545ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/apache/spark/spark-token-provider-kafka-0-10_2.12/3.5.3/spark-token-provider-kafka-0-10_2.12-3.5.3.jar ...\n",
+      "\t[SUCCESSFUL ] org.apache.spark#spark-token-provider-kafka-0-10_2.12;3.5.3!spark-token-provider-kafka-0-10_2.12.jar (163ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/apache/kafka/kafka-clients/3.4.1/kafka-clients-3.4.1.jar ...\n",
+      "\t[SUCCESSFUL ] org.apache.kafka#kafka-clients;3.4.1!kafka-clients.jar (3717ms)\n",
+      "downloading https://repo1.maven.org/maven2/com/google/code/findbugs/jsr305/3.0.0/jsr305-3.0.0.jar ...\n",
+      "\t[SUCCESSFUL ] com.google.code.findbugs#jsr305;3.0.0!jsr305.jar (146ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/apache/commons/commons-pool2/2.11.1/commons-pool2-2.11.1.jar ...\n",
+      "\t[SUCCESSFUL ] org.apache.commons#commons-pool2;2.11.1!commons-pool2.jar (177ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-client-runtime/3.3.4/hadoop-client-runtime-3.3.4.jar ...\n",
+      "\t[SUCCESSFUL ] org.apache.hadoop#hadoop-client-runtime;3.3.4!hadoop-client-runtime.jar (16599ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/lz4/lz4-java/1.8.0/lz4-java-1.8.0.jar ...\n",
+      "\t[SUCCESSFUL ] org.lz4#lz4-java;1.8.0!lz4-java.jar (266ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/xerial/snappy/snappy-java/1.1.10.5/snappy-java-1.1.10.5.jar ...\n",
+      "\t[SUCCESSFUL ] org.xerial.snappy#snappy-java;1.1.10.5!snappy-java.jar(bundle) (477ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/slf4j/slf4j-api/2.0.7/slf4j-api-2.0.7.jar ...\n",
+      "\t[SUCCESSFUL ] org.slf4j#slf4j-api;2.0.7!slf4j-api.jar (146ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-client-api/3.3.4/hadoop-client-api-3.3.4.jar ...\n",
+      "\t[SUCCESSFUL ] org.apache.hadoop#hadoop-client-api;3.3.4!hadoop-client-api.jar (9364ms)\n",
+      "downloading https://repo1.maven.org/maven2/commons-logging/commons-logging/1.1.3/commons-logging-1.1.3.jar ...\n",
+      "\t[SUCCESSFUL ] commons-logging#commons-logging;1.1.3!commons-logging.jar (137ms)\n",
+      ":: resolution report :: resolve 15374ms :: artifacts dl 157167ms\n",
       "\t:: modules in use:\n",
       "\tcom.amazonaws#aws-java-sdk-bundle;1.12.262 from central in [default]\n",
       "\tcom.google.code.findbugs#jsr305;3.0.0 from central in [default]\n",
@@ -56,12 +84,12 @@
       "\t|                  |            modules            ||   artifacts   |\n",
       "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
       "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   14  |   0   |   0   |   0   ||   14  |   0   |\n",
+      "\t|      default     |   14  |   14  |   14  |   0   ||   14  |   14  |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-eba5c244-b097-4ac5-a77f-991b24115749\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-47f923af-64b7-41b5-8e42-257c90e9fded\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 14 already retrieved (0kB/83ms)\n",
-      "25/03/25 09:35:08 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t14 artifacts copied, 0 already retrieved (332424kB/1501ms)\n",
+      "25/03/25 14:00:48 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
       "/opt/conda/lib/python3.12/site-packages/pyspark/sql/context.py:113: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
@@ -89,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +181,7 @@
     "                polyline.locations = polyline.locations + [location]\n",
     "\n",
     "   \n",
-    "    print(\"Nombre d'avions mis à jour :\", len(data))"
+    "    print(\"Number of planes updated :\", len(data))"
    ]
   },
   {
@@ -173,17 +201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/03/20 10:39:30 WARN ResolveWriteToStream: Temporary checkpoint location created which is deleted normally when the query didn't fail: /tmp/temporary-260976fb-0eae-434b-95a0-8b989bc3dacd. If it's required to delete it under any circumstances, please set spark.sql.streaming.forceDeleteTempCheckpointLocation to true. Important to know deleting temp checkpoint folder is best effort.\n",
-      "25/03/20 10:39:30 WARN ResolveWriteToStream: spark.sql.adaptive.enabled is not supported in streaming DataFrames/Datasets and will be disabled.\n",
-      "25/03/20 10:39:30 WARN AdminClientConfig: These configurations '[key.deserializer, value.deserializer, enable.auto.commit, max.poll.records, auto.offset.reset]' were supplied but are not used yet.\n",
-      "ERROR:root:KeyboardInterrupt while sending command.                             \n",
+      "25/03/25 15:19:38 WARN ResolveWriteToStream: Temporary checkpoint location created which is deleted normally when the query didn't fail: /tmp/temporary-de0e45f9-13e6-421d-a908-1dc8726e9fed. If it's required to delete it under any circumstances, please set spark.sql.streaming.forceDeleteTempCheckpointLocation to true. Important to know deleting temp checkpoint folder is best effort.\n",
+      "25/03/25 15:19:38 WARN ResolveWriteToStream: spark.sql.adaptive.enabled is not supported in streaming DataFrames/Datasets and will be disabled.\n",
+      "25/03/25 15:19:39 WARN AdminClientConfig: These configurations '[key.deserializer, value.deserializer, enable.auto.commit, max.poll.records, auto.offset.reset]' were supplied but are not used yet.\n",
+      "25/03/25 17:27:24 ERROR TaskSchedulerImpl: Lost executor 0 on 192.168.0.3: worker lost: Not receiving heartbeat for 60 seconds\n",
+      "ERROR:root:KeyboardInterrupt while sending command.\n",
       "Traceback (most recent call last):\n",
       "  File \"/opt/conda/lib/python3.12/site-packages/py4j/java_gateway.py\", line 1038, in send_command\n",
       "    response = connection.send_command(command)\n",
@@ -204,7 +233,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 38\u001b[0m\n\u001b[1;32m     28\u001b[0m query \u001b[38;5;241m=\u001b[39m df_filtered\u001b[38;5;241m.\u001b[39mwriteStream \\\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;241m.\u001b[39mforeachBatch(actualise_plane_position) \\\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;241m.\u001b[39moutputMode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mappend\u001b[39m\u001b[38;5;124m\"\u001b[39m) \\\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;241m.\u001b[39mstart()\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# query_console = df_parsed.writeStream \\\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m#     .outputMode(\"append\") \\\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m#     .format(\"console\") \\\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m#     .start()\u001b[39;00m\n\u001b[0;32m---> 38\u001b[0m \u001b[43mquery\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mawaitTermination\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;66;03m# query_console.awaitTermination()\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[20], line 36\u001b[0m\n\u001b[1;32m     26\u001b[0m query \u001b[38;5;241m=\u001b[39m df_filtered\u001b[38;5;241m.\u001b[39mwriteStream \\\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;241m.\u001b[39mforeachBatch(actualise_plane_position) \\\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;241m.\u001b[39moutputMode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mappend\u001b[39m\u001b[38;5;124m\"\u001b[39m) \\\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;241m.\u001b[39mstart()\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# query_console = df_parsed.writeStream \\\u001b[39;00m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m#     .outputMode(\"append\") \\\u001b[39;00m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m#     .format(\"console\") \\\u001b[39;00m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m#     .start()\u001b[39;00m\n\u001b[0;32m---> 36\u001b[0m \u001b[43mquery\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mawaitTermination\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# query_console.awaitTermination()\u001b[39;00m\n",
       "File \u001b[0;32m/opt/conda/lib/python3.12/site-packages/pyspark/sql/streaming/query.py:221\u001b[0m, in \u001b[0;36mStreamingQuery.awaitTermination\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    219\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_jsq\u001b[38;5;241m.\u001b[39mawaitTermination(\u001b[38;5;28mint\u001b[39m(timeout \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1000\u001b[39m))\n\u001b[1;32m    220\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 221\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jsq\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mawaitTermination\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/conda/lib/python3.12/site-packages/py4j/java_gateway.py:1321\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1314\u001b[0m args_command, temp_args \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_build_args(\u001b[38;5;241m*\u001b[39margs)\n\u001b[1;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[0;32m-> 1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m get_return_value(\n\u001b[1;32m   1323\u001b[0m     answer, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_id, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n",
       "File \u001b[0;32m/opt/conda/lib/python3.12/site-packages/py4j/java_gateway.py:1038\u001b[0m, in \u001b[0;36mGatewayClient.send_command\u001b[0;34m(self, command, retry, binary)\u001b[0m\n\u001b[1;32m   1036\u001b[0m connection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_connection()\n\u001b[1;32m   1037\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1038\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mconnection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1039\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m binary:\n\u001b[1;32m   1040\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m response, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_create_connection_guard(connection)\n",
@@ -256,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,13 +304,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed988272b13c4148b8c3b73fc79bf1c9",
+       "model_id": "52f045ead32c4307bdd0e3752531ce04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -289,7 +318,7 @@
        "Map(center=[45.3288, 1.0], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_o…"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,6 +374,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
